--- a/index.html
+++ b/index.html
@@ -1,36 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>College Smart Event Portal</title>
+<title>Smart Event Attendance QR</title>
 <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
 <style>
-body { font-family: Arial; text-align: center; background: linear-gradient(to right, #4facfe, #00f2fe); color: black; }
-
-.event-box { background: white; padding: 25px; margin: 40px auto; width: 350px; border-radius: 15px; box-shadow: 0 10px 20px rgba(0,0,0,0.2); }
-
-button { padding: 10px 20px; background: blue; color: white; border: none; border-radius: 5px; cursor: pointer; }
-button:hover { background: darkblue; }
-
-#qrcode { margin-top: 20px; }
-
-#certificate { display: none; background: white; padding: 25px; margin: 30px auto; width: 400px; border-radius: 15px; border: 5px solid black; }
+body{ font-family: Arial; text-align:center; background:linear-gradient(to right,#4facfe,#00f2fe); color:black; }
+.event-box{ background:white; padding:25px; margin:40px auto; width:350px; border-radius:15px; box-shadow:0 10px 20px rgba(0,0,0,0.2); }
+input{ width:80%; padding:8px; margin:8px 0;}
+button{ padding:10px 20px; background:blue; color:white; border:none; border-radius:5px; cursor:pointer;}
+button:hover{ background:darkblue;}
+#certificate{ display:none; background:white; padding:25px; margin:30px auto; width:400px; border-radius:15px; border:5px solid black;}
+#qrcode{ margin-top:20px; }
 </style>
 </head>
 <body>
 
-<h1>College Smart Event Portal</h1>
+<h1>AI Workshop 2026</h1>
 
 <div class="event-box">
-  <h2>AI Workshop 2026</h2>
-  <p><b>Date:</b> March 10, 2026</p>
-  <p><b>Venue:</b> Seminar Hall</p>
-
-  <button onclick="generateQR()">Generate Registration QR</button>
+  <h3>Enter Your Name for QR Attendance</h3>
+  <input type="text" id="studentName" placeholder="Your Name"><br>
+  <button onclick="generateQR()">Generate Your QR</button>
   <div id="qrcode"></div>
-
-  <br><br>
-
-  <button onclick="registerAndGenerateCertificate()">Register & Generate Certificate</button>
+  <br>
+  <button onclick="markAttendance()">Scan QR & Mark Attendance</button>
   <p id="attendanceMsg"></p>
 </div>
 
@@ -45,27 +38,30 @@ button:hover { background: darkblue; }
 </div>
 
 <script>
-// Generate QR for registration link
-function generateQR() {
+let studentData="";
+
+function generateQR(){
+  const name = document.getElementById("studentName").value.trim();
+  if(!name){ alert("Enter your name first!"); return; }
+  studentData = name; // store name to simulate QR scan
   const qrDiv = document.getElementById("qrcode");
-  qrDiv.innerHTML = "";
-  const url = window.location.href; // Registration page link
-  QRCode.toCanvas(url, { width: 200 }, function(error, canvas) {
-    if (error) console.error(error);
+  qrDiv.innerHTML="";
+  QRCode.toCanvas(name, {width:200}, function(error, canvas){
+    if(error) console.error(error);
     qrDiv.appendChild(canvas);
   });
 }
 
-// Register via QR + generate certificate automatically
-function registerAndGenerateCertificate() {
+function markAttendance(){
+  if(!studentData){
+    alert("Please generate your QR first!");
+    return;
+  }
   const today = new Date().toLocaleString();
-  document.getElementById("attendanceMsg").innerHTML =
-    "Attendance Marked Successfully ✅ <br> Time: " + today;
+  document.getElementById("attendanceMsg").innerHTML = "Attendance Marked ✅ <br> Time: " + today;
 
-  // Simulate student name from QR registration
-  const name = "Registered Student"; // You can later replace with actual QR data
   document.getElementById("certificate").style.display = "block";
-  document.getElementById("certName").innerText = name;
+  document.getElementById("certName").innerText = studentData;
 }
 </script>
 
