--- a/index.html
+++ b/index.html
@@ -4,54 +4,13 @@
 <title>College Smart Event Portal</title>
 <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
 <style>
-body {
-  font-family: Arial;
-  text-align: center;
-  background: linear-gradient(to right, #4facfe, #00f2fe);
-  color: black;
-}
-
-.event-box, .registration-box, .attendance-box, .certificate-box {
-  background: white;
-  padding: 25px;
-  margin: 40px auto;
-  width: 350px;
-  border-radius: 15px;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.2);
-}
-
-input{
-  width: 80%;
-  padding: 8px;
-  margin: 8px 0;
-}
-
-button {
-  padding: 10px 20px;
-  background: blue;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-button:hover {
-  background: darkblue;
-}
-
-#qrcode {
-  margin-top: 20px;
-}
-
-#certificate {
-  display: none;
-  background: white;
-  padding: 25px;
-  margin: 30px auto;
-  width: 400px;
-  border-radius: 15px;
-  border: 5px solid black;
-}
+body { font-family: Arial; text-align: center; background: linear-gradient(to right,#4facfe,#00f2fe); color:black; }
+.event-box, .registration-box, .attendance-box, .certificate-box { background:white; padding:25px; margin:40px auto; width:350px; border-radius:15px; box-shadow:0 10px 20px rgba(0,0,0,0.2);}
+input{ width:80%; padding:8px; margin:8px 0;}
+button{ padding:10px 20px; background:blue; color:white; border:none; border-radius:5px; cursor:pointer;}
+button:hover{background:darkblue;}
+#qrcode{ margin-top:20px; }
+#certificate{ display:none; background:white; padding:25px; margin:30px auto; width:400px; border-radius:15px; border:5px solid black;}
 </style>
 </head>
 <body>
@@ -91,7 +50,6 @@ button:hover {
 </div>
 
 <script>
-// Store registered students in localStorage
 function registerStudent(){
   const name = document.getElementById("studentName").value.trim();
   const id = document.getElementById("studentID").value.trim();
@@ -108,23 +66,22 @@ function registerStudent(){
     return;
   }
 
-  students.push({name: name, id: id, status: "Registered"});
+  students.push({name:name,id:id,status:"Registered"});
   localStorage.setItem("students", JSON.stringify(students));
 
   document.getElementById("regMsg").innerHTML = "Registration Successful ✅";
 
-  // Hide registration, show attendance
-  document.querySelector(".registration-box").style.display = "none";
+  // Show attendance box only after registration
   document.querySelector(".attendance-box").style.display = "block";
 }
 
-// Mark attendance and generate certificate
 function markAttendance(){
   const name = document.getElementById("studentName").value.trim();
   const id = document.getElementById("studentID").value.trim();
 
   let students = JSON.parse(localStorage.getItem("students") || "[]");
   const student = students.find(s => s.id === id);
+
   if(!student){
     alert("Student not registered!");
     return;
@@ -142,11 +99,10 @@ function markAttendance(){
 
   document.getElementById("attendanceMsg").innerHTML = "Attendance Marked ✅<br>Time: "+time;
 
-  // Show certificate
+  // Show certificate only after attendance
   document.getElementById("certificate").style.display = "block";
   document.getElementById("certName").innerText = student.name;
 }
 </script>
-
 </body>
 </html>
