--- a/index.html
+++ b/index.html
@@ -4,18 +4,86 @@
 <title>College Smart Event Portal</title>
 <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
 <style>
-body { font-family: Arial; text-align: center; background: linear-gradient(to right,#4facfe,#00f2fe); color:black; }
-.event-box, .registration-box, .attendance-box, .certificate-box { background:white; padding:25px; margin:40px auto; width:350px; border-radius:15px; box-shadow:0 10px 20px rgba(0,0,0,0.2);}
-input{ width:80%; padding:8px; margin:8px 0;}
-button{ padding:10px 20px; background:blue; color:white; border:none; border-radius:5px; cursor:pointer;}
-button:hover{background:darkblue;}
-#qrcode{ margin-top:20px; }
-#certificate{ display:none; background:white; padding:25px; margin:30px auto; width:400px; border-radius:15px; border:5px solid black;}
+/* Body */
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  text-align: center;
+  background: linear-gradient(135deg, #667eea, #764ba2);
+  color: #333;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
+/* Event box */
+.event-box {
+  background: rgba(255, 255, 255, 0.95);
+  padding: 25px;
+  margin: 40px auto;
+  width: 380px;
+  border-radius: 15px;
+  box-shadow: 0 12px 25px rgba(0,0,0,0.25);
+  transition: transform 0.3s;
+}
+.event-box:hover {
+  transform: translateY(-5px);
+}
+
+/* Registration / Attendance / Certificate boxes */
+.registration-box, .attendance-box, .certificate-box {
+  background: rgba(255,255,255,0.95);
+  padding: 25px;
+  margin: 30px auto;
+  width: 380px;
+  border-radius: 15px;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+  transition: transform 0.3s;
+}
+.registration-box:hover, .attendance-box:hover, .certificate-box:hover {
+  transform: translateY(-3px);
+}
+
+/* Inputs */
+input, select {
+  width: 80%;
+  padding: 10px;
+  margin: 10px 0;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+}
+
+/* Buttons */
+button {
+  padding: 12px 25px;
+  background: #667eea;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background 0.3s, transform 0.2s;
+}
+button:hover {
+  background: #764ba2;
+  transform: scale(1.05);
+}
+
+/* QR and certificate spacing */
+#qrcode {
+  margin-top: 20px;
+}
+
+#certificate {
+  display: none;
+  border: 5px solid #667eea;
+  text-align: center;
+}
 </style>
 </head>
 <body>
 
-<h1>College Smart Event Portal</h1>
+<h1 style="color:white; text-shadow: 2px 2px 5px rgba(0,0,0,0.3);">College Smart Event Portal</h1>
 
 <div class="event-box">
   <h2>AI Workshop 2026</h2>
@@ -28,14 +96,24 @@ button:hover{background:darkblue;}
   <h3>Student Registration</h3>
   <input type="text" id="studentName" placeholder="Enter Name"><br>
   <input type="text" id="studentID" placeholder="Enter ID"><br>
+  <input type="text" id="studentDept" placeholder="Enter Department"><br>
+  <select id="studentYear">
+    <option value="">Select Year</option>
+    <option value="1st Year">1st Year</option>
+    <option value="2nd Year">2nd Year</option>
+    <option value="3rd Year">3rd Year</option>
+    <option value="4th Year">4th Year</option>
+  </select><br>
   <button onclick="registerStudent()">Register</button>
   <p id="regMsg"></p>
 </div>
 
-<!-- Attendance -->
+<!-- QR Attendance -->
 <div class="attendance-box" style="display:none;">
-  <h3>Attendance</h3>
-  <button onclick="markAttendance()">Mark Attendance & Generate Certificate</button>
+  <h3>Your Attendance QR</h3>
+  <div id="qrcode"></div>
+  <br>
+  <button onclick="scanQR()">Scan QR & Mark Attendance</button>
   <p id="attendanceMsg"></p>
 </div>
 
@@ -44,17 +122,22 @@ button:hover{background:darkblue;}
   <h2>Certificate of Participation</h2>
   <p>This is to certify that</p>
   <h3 id="certName"></h3>
+  <p id="certDeptYear"></p>
   <p>has successfully attended AI Workshop 2026</p>
   <p>Date: March 10, 2026</p>
   <button onclick="window.print()">Print / Download</button>
 </div>
 
 <script>
+let currentStudent = null;
+
 function registerStudent(){
   const name = document.getElementById("studentName").value.trim();
   const id = document.getElementById("studentID").value.trim();
+  const dept = document.getElementById("studentDept").value.trim();
+  const year = document.getElementById("studentYear").value;
 
-  if(!name || !id){
+  if(!name || !id || !dept || !year){
     alert("Please fill all fields!");
     return;
   }
@@ -66,26 +149,37 @@ function registerStudent(){
     return;
   }
 
-  students.push({name:name,id:id,status:"Registered"});
+  currentStudent = {name:name, id:id, department:dept, year:year, status:"Registered"};
+  students.push(currentStudent);
   localStorage.setItem("students", JSON.stringify(students));
 
   document.getElementById("regMsg").innerHTML = "Registration Successful ✅";
 
-  // Show attendance box only after registration
+  // Show attendance and generate QR
+  document.querySelector(".registration-box").style.display = "none";
   document.querySelector(".attendance-box").style.display = "block";
+  generateQR(currentStudent.id);
 }
 
-function markAttendance(){
-  const name = document.getElementById("studentName").value.trim();
-  const id = document.getElementById("studentID").value.trim();
+// Generate QR for attendance
+function generateQR(studentID){
+  const qrDiv = document.getElementById("qrcode");
+  qrDiv.innerHTML = "";
+  QRCode.toCanvas(studentID, {width:200}, function(error, canvas){
+    if(error) console.error(error);
+    qrDiv.appendChild(canvas);
+  });
+}
 
-  let students = JSON.parse(localStorage.getItem("students") || "[]");
-  const student = students.find(s => s.id === id);
-
-  if(!student){
-    alert("Student not registered!");
+// Scan QR and mark attendance
+function scanQR(){
+  if(!currentStudent){
+    alert("No student registered!");
     return;
   }
+
+  let students = JSON.parse(localStorage.getItem("students") || "[]");
+  const student = students.find(s => s.id === currentStudent.id);
 
   if(student.status === "Present"){
     alert("Attendance already marked!");
@@ -99,9 +193,10 @@ function markAttendance(){
 
   document.getElementById("attendanceMsg").innerHTML = "Attendance Marked ✅<br>Time: "+time;
 
-  // Show certificate only after attendance
+  // Show certificate
   document.getElementById("certificate").style.display = "block";
   document.getElementById("certName").innerText = student.name;
+  document.getElementById("certDeptYear").innerText = student.department + " | " + student.year;
 }
 </script>
 </body>
